fix: fixed overflow-y aside

--- a/src/js/components/shared/aside/aside.style.css
+++ b/src/js/components/shared/aside/aside.style.css
@@ -12,7 +12,7 @@
     top: 0;
     left: 0;
     bottom: 0;
-    overflow-y: auto;
+    overflow-y: hidden;
     transition: all ease-in-out 0.5s;
     z-index: 20;
 }
